# deepagents-api

./: .gitignore  Dockerfile  render.yaml
.github/workflows/: _benchmark.yml  _eval.yml  _harbor_run.yml  _lint.yml  _test.yml  bump_uv_pin.yml  check_dep_freshness.yml  check_extras_sync.yml  check_lockfiles.yml  check_partner_bounds.yml  check_release_deps.yml  check_sdk_pin.yml  check_versions.yml  ci.yml  clbench.yml  close_old_prs.yml  close_unchecked_issues.yml  dcode_release_notes.yml  dcode_release_notes_check.yml  dependabot_lockfile_fix.yml  evals.yml  evals_trials.yml  harbor.yml  integration_tests.yml  openwiki-update.yml  pr_labeler.yml  pr_labeler_backfill.yml  pr_scope_file_check.yml  release-please.yml  release.yml  release_please_initial_baseline_check.yml  release_please_scope_check.yml  tag-external-issues.yml  unified_evals.yml
langgraph-server/: Dockerfile.generated  graph.py  langgraph.json  pyproject.toml
libs/acp/: CHANGELOG.md
libs/code/: CHANGELOG.md  pyproject.toml
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/partners/quickjs/: CHANGELOG.md
libs/talon/: CHANGELOG.md
server/: main.py  pyproject.toml  requirements.txt
server/static/: index.html
