[project]
name = "deepagents-api"
version = "0.1.0"
description = "FastAPI server wrapping LangChain Deep Agents"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain-anthropic>=1.5.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-google-genai>=4.3.1,<5.0.0",
]
